Kan köra 2 rutter sen blir det fel med antingen antalet passengers eller nåt annat